--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -5,22 +5,22 @@
     "pool": "Pool",
     "farm": "Farm",
     "stake": "Stake",
-    "newPng": "Neues PNG",
-    "oldPng": "Altes PNG",
+    "newRug": "Neues RUG",
+    "oldRug": "Altes RUG",
     "vote": "Abstimmen",
     "ido": "IDO",
     "charts": "Diagramme",
     "forum": "Forum",
-    "pngBreakDown": "Deine PNG-Übersicht",
+    "pngBreakDown": "Deine RUG-Übersicht",
     "balance": "Kontostand: ",
     "unclaimed": "Nicht beansprucht: ",
-    "pngPrice": "PNG-Preis:",
-    "pngCirculation": "PNG im Umlauf:",
+    "pngPrice": "RUG-Preis:",
+    "pngCirculation": "RUG im Umlauf:",
     "totalSupply": "Gesamtmenge",
     "makeSureURLWarning": "Gehe sicher, dass die URL folgende ist:",
     "alwaysMakeSureWarning": "Gehe immer sicher, dass die URL folgende ist:",
     "bookmarkIt": "Füge sie deinen Favoriten hinzu, um dich abzusichern.",
-    "addMetamask": "PNG zu MetaMask hinzufügen"
+    "addMetamask": "RUG zu MetaMask hinzufügen"
   },
   "accountDetails": {
     "connectedWith": "Verbunden mit ",
@@ -60,7 +60,7 @@
     "deposit": "Einzahlen",
     "poolRate": "Pool-Rate",
     "currentReward": "Momentane Vergütung",
-    "pngPerAvax": "PNG / Woche pro AVAX",
+    "pngPerAvax": "RUG / Woche pro AVAX",
     "rewardPerWeek": "{{ symbol }} / Woche",
     "earnUpTo": "Verdiene jährlich bis zu",
     "yourRate": "Deine Rate",
@@ -79,8 +79,8 @@
     "deposited": "Eingezahlt",
     "withdrawDepositedLiquidity": "Eingezahlte Liquidität abbuchen",
     "depositedPglLiquidity": "Eingezahlte PGL-Liquidität:",
-    "whenYouWithdrawWarning": "Wenn du abbuchst, wird deine ausstehenden PNG-Vergütung beansprucht. Deine Pangolin-Liquiditätstoken, PGL, werden an dich zurückgegeben und du wirst keine PNG-Vergütungen mehr auf diese Liquiditätsposition erhalten. Deine ursprüngliche Liquidität wird im Liquiditätspool verbleiben.",
-    "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your PNG is returned to you. You will no longer earn {{ symbol }} rewards on this PNG.",
+    "whenYouWithdrawWarning": "Wenn du abbuchst, wird deine ausstehenden RUG-Vergütung beansprucht. Deine Pangolin-Liquiditätstoken, PGL, werden an dich zurückgegeben und du wirst keine RUG-Vergütungen mehr auf diese Liquiditätsposition erhalten. Deine ursprüngliche Liquidität wird im Liquiditätspool verbleiben.",
+    "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
     "withdrawAndClaim": "Abbuchen & Beanspruchen",
     "withdrewStakingToken": "{{ symbol }} abgebucht!",
     "approve": "Bestätigen",
@@ -227,7 +227,7 @@
     "minutes": "Minuten"
   },
   "vote": {
-    "earnedPng": "Verdiente PNG-Token stellen stimmberechtigte Anteile bei Pangolin-Abstimmungen dar.",
+    "earnedRug": "Verdiente RUG-Token stellen stimmberechtigte Anteile bei Pangolin-Abstimmungen dar.",
     "canEitherVote": "Du kannst entweder über jeden Antrag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
     "delegateVotes": "Stimmen delegieren",
     "selfDelegate": "An dich selbst delegieren",
@@ -293,35 +293,35 @@
     "poolTokens": " Pool-Token"
   },
   "airdrop": {
-    "claimPngAirdrop": "PNG aus Airdrop beanspruchen",
+    "claimRugAirdrop": "RUG aus Airdrop beanspruchen",
     "claimPeriodEnded": "Der Zeitraum für das Beanspruchen von Airdrops ist abgelaufen.",
     "connectWalletViewLiquidity": "Verbinde mit einer Wallet, um deine Liquidität zu sehen.",
-    "noAvailableClaim": "Dir stehen keine PNG zum Beanspruchen zu.",
+    "noAvailableClaim": "Dir stehen keine RUG zum Beanspruchen zu.",
     "noUniNoSushi": "Du hast keine UNI- oder SUSHI Token. Bitte folge diesem Tutorial, um deiner Wallet UNI- oder SUSHI-Token hinzuzufügen.",
     "youHave": "Du hast ",
-    "pngAvailableClaim": " PNG verfügbar zum Beanspruchen",
+    "pngAvailableClaim": " RUG verfügbar zum Beanspruchen",
     "loading": "Lädt",
     "welcomeToTeamPangolin": "Willkommen im Pangolin-Team",
     "claim": "Beanspruchen "
   },
   "earnPage": {
     "pangolinLiquidityMining": "Pangolin Liquidity-Mining",
-    "pangolinLiquidityStaking": "Pangolin PNG staking",
-    "depositPangolinLiquidity": "Zahle deine Pangolin Liquiditätsprovider-Token (PGL) ein, um PNG, den Governance-Token des Pangolin-Protokolls zu erhalten.",
-    "depositPangolinStaking": "Deposit and stake your PNG tokens to earn more tokens.",
+    "pangolinLiquidityStaking": "Pangolin RUG staking",
+    "depositPangolinLiquidity": "Zahle deine Pangolin Liquiditätsprovider-Token (PGL) ein, um RUG, den Governance-Token des Pangolin-Protokolls zu erhalten.",
+    "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
     "currentOpportunities": "Current opportunities",
-    "readMoreAboutPng": "Erfahre mehr über PNG",
+    "readMoreAboutRug": "Erfahre mehr über RUG",
     "getInsuranceCoverage": "Versicherungsschutz abschließen",
     "getCoverNexusMutual": "Schützen Sie sich bei Nexus Mutual",
     "importantUpdate": "WICHTIGES UPDATE",
     "pangolinGovernanceProposalResult": "Als Ergebnis des Pangolin-Governance-Antrags 1 ändert Pangolin die Staking-Smart Contracts! Nach ca. 09:59 MEZ am 19.4. werden alle Staking-Vergütungen auf die neuen Staking-Smart Contracts verteilt. Vor der Umstellung werden alle Vergütungen noch auf die alten Verträge verteilt. Um Unterbrechungen bei den Yield Farming-Vergütungen zu vermeiden, musst du deine Liquidität aus den alten Smart Contracts herausnehmen und in den neuen Smart Contracts staken. Du musst weder Liquidität aus deinen Pools entfernen noch deine Positionen ändern.",
-    "oldPngPools": "Alte PNG-Pools",
-    "newPngPools": "Neue PNG-Pools",
+    "oldRugPools": "Alte RUG-Pools",
+    "newRugPools": "Neue RUG-Pools",
     "participatingPools": "Pools, an denen du beteiligt bist",
     "rewardsNeverEnd": "Die Vergütungen enden nie!",
     "noActiveRewards": "Keine Vergütungen aktiv",
     "liquidityMining": "Liquidity Mining",
-    "pngStaking": "PNG Staking",
+    "pngStaking": "RUG Staking",
     "totalStaked": "Insgesamt gestakt",
     "poolRate": "Pool-Rate",
     "step1": "Schritt 1. Hole dir Pangolin Liquidity-Token (PGL)",
@@ -332,7 +332,7 @@
     "unclaimedReward": "Deine unbeanspruchten {{ symbol }}",
     "claim": "Beanspruchen",
     "rewardPerWeek": " {{ symbol }} / Woche",
-    "automagically": "Wenn du abbuchst, wird der Smart Contract automagisch PNG für dich beanspruchen!",
+    "automagically": "Wenn du abbuchst, wird der Smart Contract automagisch RUG für dich beanspruchen!",
     "deposit": "Einzahlen",
     "depositStakingTokens": "Zahle {{ symbol }}-Token ein",
     "stake": "Stake",
@@ -421,8 +421,8 @@
     "unlockVotes": "Stimmen freischalten",
     "updateDelegation": "Delegierung aktualisieren",
     "pangolinGovernance": "Pangolin-Governance",
-    "earnedPngTokens": "PNG-Token repräsentieren Stimmgewichte in der Pangolin Governance. Du kannst entweder über jeden Vorschlag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
-    "eligibleToVote": "Um stimmberechtigt zu sein, musst du PNG in deiner Wallet haben und diese zu Beginn der Abstimmung delegieren. Nachdem die Abstimmung begonnen hat, kannst du deine PNG einem Pool hinzufügen oder ausgeben.",
+    "earnedRugTokens": "RUG-Token repräsentieren Stimmgewichte in der Pangolin Governance. Du kannst entweder über jeden Vorschlag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
+    "eligibleToVote": "Um stimmberechtigt zu sein, musst du RUG in deiner Wallet haben und diese zu Beginn der Abstimmung delegieren. Nachdem die Abstimmung begonnen hat, kannst du deine RUG einem Pool hinzufügen oder ausgeben.",
     "governanceVotes": "Abstimmungen zur Governance werden mit einfacher Mehrheit entschieden. Es gibt keine Mindestwahlbeteiligung.",
     "proposals": "Anträge",
     "allProposals": "Alle Anträge",
@@ -432,7 +432,7 @@
     "edit": "bearbeiten",
     "noProposalsFound": "Keine Anträge gefunden.",
     "proposalCommunityMembers": "Von Community-Mitgliedern eingereichte Vorschläge werden hier erscheinen.",
-    "minimumThreshold": "Zum Einreichen von Anträgen ist eine Mindestmenge von 1,000,000 PNG erforderlich",
+    "minimumThreshold": "Zum Einreichen von Anträgen ist eine Mindestmenge von 1,000,000 RUG erforderlich",
     "votingStarted": "Die Abstimmung hat begonnen ",
     "votingStarts": "Die Abstimmung beginnt ",
     "votingEnded": "Die Abstimmung ist beendet ",
