--- a/public/locales/pt-br.json
+++ b/public/locales/pt-br.json
@@ -5,22 +5,22 @@
         "pool": "Pool",
         "farm": "Farm",
         "stake": "Stake",
-        "newPng": "Novo PNG",
-        "oldPng": "Antigo PNG",
+        "newRug": "Novo RUG",
+        "oldRug": "Antigo RUG",
         "vote": "Votar",
         "ido": "IDO",
         "charts": "Gráficos",
         "forum": "Fórum",
-        "pngBreakDown": "Sua análise de PNG",
+        "pngBreakDown": "Sua análise de RUG",
         "balance": "Saldo: ",
         "unclaimed": "Não resgatado: ",
-        "pngPrice": "Preço do PNG:",
-        "pngCirculation": "PNG em circulação:",
+        "pngPrice": "Preço do RUG:",
+        "pngCirculation": "RUG em circulação:",
         "totalSupply": "Suprimento total",
         "makeSureURLWarning": "Certifique-se que a URL seja",
         "alwaysMakeSureWarning": "Certifique-se sempre que a URL seja",
         "bookmarkIt": "marque para ser seguro.",
-        "addMetamask": "Adicionar PNG no MetaMask"
+        "addMetamask": "Adicionar RUG no MetaMask"
     },
     "accountDetails": {
         "connectedWith": "Conectado com ",
@@ -60,7 +60,7 @@
         "deposit": "Deposite",
         "poolRate": "Ganhos da pool",
         "currentReward": "Recompensa atual",
-        "pngPerAvax": "PNG / Semana por AVAX",
+        "pngPerAvax": "RUG / Semana por AVAX",
         "rewardPerWeek": "{{ symbol }} / Semana",
         "earnUpTo": "Ganhe até (anual)",
         "yourRate": "Sua taxa",
@@ -79,8 +79,8 @@
         "deposited": "Depositado",
         "withdrawDepositedLiquidity": "Retirar a liquidez depositada",
         "depositedPglLiquidity": "Deposited PGL liquidity:",
-        "whenYouWithdrawWarning": "Quando você retirar, seu PNG é resgatado e seus tokens de liquidez do Pangolin, PGL, são devolvidos para você. Você não vai mais ganhar recompensas de PNG nessa liquidez. Sua liquidez original de token permanecerá na sua pool de liquidez.",
-        "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your PNG is returned to you. You will no longer earn {{ symbol }} rewards on this PNG.",
+        "whenYouWithdrawWarning": "Quando você retirar, seu RUG é resgatado e seus tokens de liquidez do Pangolin, PGL, são devolvidos para você. Você não vai mais ganhar recompensas de RUG nessa liquidez. Sua liquidez original de token permanecerá na sua pool de liquidez.",
+        "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
         "withdrawAndClaim": "Retirar & resgatar",
         "withdrewStakingToken": "Retirar {{ symbol }}!",
         "approve": "Aprovar",
@@ -227,7 +227,7 @@
         "minutes": "minutos"
     },
     "vote": {
-        "earnedPng": "Os tokens PNG ganhos representam ações de votação na governança do Pangolin.",
+        "earnedRug": "Os tokens RUG ganhos representam ações de votação na governança do Pangolin.",
         "canEitherVote": "Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro.",
         "delegateVotes": "Delegar votos",
         "selfDelegate": "Delegar você mesmo",
@@ -293,35 +293,35 @@
         "poolTokens": " Pool Tokens"
     },
     "airdrop": {
-        "claimPngAirdrop": "Resgatar PNG do Airdrop",
+        "claimRugAirdrop": "Resgatar RUG do Airdrop",
         "claimPeriodEnded": "O perído de resgate do airdrop acabou.",
         "connectWalletViewLiquidity": "Conecte-se a uma carteira para ver sua liquidez.",
         "noAvailableClaim": "Você não tem resgate diponível.",
         "noUniNoSushi": "Você não tem tokens UNI ou SUSHI, Por favor, siga o tutorial para adicionar os tokens UNI ou SUSHI na sua carteira.",
         "youHave": "Você tem ",
-        "pngAvailableClaim": " PNG disponível para resgate",
+        "pngAvailableClaim": " RUG disponível para resgate",
         "loading": "Carregando",
         "welcomeToTeamPangolin": "Bem vindo à equipe do Pangolin",
         "claim": "Resgatar "
     },
     "earnPage": {
         "pangolinLiquidityMining": "Mineração de liquidez do Pangolin",
-        "pangolinLiquidityStaking": "Pangolin PNG staking",
-        "depositPangolinLiquidity": "Deposite seus tokens PGL (Pangolin Liquidity Provider) para receber PNG, o token de governança do protocolo Pangolin.",
-        "depositPangolinStaking": "Deposit and stake your PNG tokens to earn more tokens.",
+        "pangolinLiquidityStaking": "Pangolin RUG staking",
+        "depositPangolinLiquidity": "Deposite seus tokens PGL (Pangolin Liquidity Provider) para receber RUG, o token de governança do protocolo Pangolin.",
+        "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
         "currentOpportunities": "Current opportunities",
-        "readMoreAboutPng": "Leia mais sobre PNG",
+        "readMoreAboutRug": "Leia mais sobre RUG",
         "getInsuranceCoverage": "Obtenha cobertura de seguro",
         "getCoverNexusMutual": "Obtenha cobertura no Nexus Mutual",
         "importantUpdate": "ATUALIZAÇÃO IMPORTANTE",
         "pangolinGovernanceProposalResult": "Como resultado da proposta de governança 1 do Pangolin, O Pangolin está mudando contratos de staking! Aproximadamente cerca de depois de 08:59 UTC no dia 19/4, todas as recompensas de staking serão distribuídas para os novos contratos de staking. Antes da mudança, todas as recompensas ainda serão distribuídas para os contratos antigos. Para evitar interrupções nas recompensas de yield farming, Você precisa remover sua liquidez dos contratos antigos e delegar novamente nos novos contratos. Você não precisa remover liquidez das suas pools ou alterar suas posições.",
-        "oldPngPools": "Pools antigas de PNG",
-        "newPngPools": "Novas pools de PNG",
+        "oldRugPools": "Pools antigas de RUG",
+        "newRugPools": "Novas pools de RUG",
         "participatingPools": "Pools participantes",
         "rewardsNeverEnd": "As recompensas nunca terminam!",
         "noActiveRewards": "Não há recompensas ativas",
         "liquidityMining": "Mineração de liquidez",
-        "pngStaking": "PNG Staking",
+        "pngStaking": "RUG Staking",
         "totalStaked": "Total depositado",
         "poolRate": "Proporção da Pool",
         "step1": "Etapa 1. Obtenha Tokens Pangolin Liquidity (PGL)",
@@ -332,7 +332,7 @@
         "unclaimedReward": "{{ symbol }} não resgatado",
         "claim": "Resgate",
         "rewardPerWeek": " {{ symbol }} / Semana",
-        "automagically": "Quando você retirar, o contrato automagicamente irá resgatar PNG em seu nome!",
+        "automagically": "Quando você retirar, o contrato automagicamente irá resgatar RUG em seu nome!",
         "deposit": "Deposite",
         "depositStakingTokens": "Deposite Tokens {{ symbol }}",
         "stake": "Stake",
@@ -421,8 +421,8 @@
         "unlockVotes": "Desbloquear votos",
         "updateDelegation": "Atualizar delegação",
         "pangolinGovernance": "Governaça do Pangolin",
-        "earnedPngTokens": "Os tokens PNG representam ações de votação na governança do Pangolin. Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro .",
-        "eligibleToVote": "Para ser elegível para votar, você deve ter PNG em sua carteira e deve delegar eles ao início da votação. Após o início da votação, você pode pode colocá-los em uma pool ou gastá-los.",
+        "earnedRugTokens": "Os tokens RUG representam ações de votação na governança do Pangolin. Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro .",
+        "eligibleToVote": "Para ser elegível para votar, você deve ter RUG em sua carteira e deve delegar eles ao início da votação. Após o início da votação, você pode pode colocá-los em uma pool ou gastá-los.",
         "governanceVotes": "Votações de governança são decididas por maioria simples. Não há quórum necessário.",
         "proposals": "Propostas",
         "allProposals": "Todas as propostas",
@@ -432,7 +432,7 @@
         "edit": "editar",
         "noProposalsFound": "Nenhuma proposta encontrada.",
         "proposalCommunityMembers": "Propostas submetidas por membros da comunidade irão aparecer aqui.",
-        "minimumThreshold": "Um mínimo de 1,000,000 PNG é requerido para submeter propostas",
+        "minimumThreshold": "Um mínimo de 1,000,000 RUG é requerido para submeter propostas",
         "votingStarted": "Votação iniciada ",
         "votingStarts": "Votação inicia em ",
         "votingEnded": "Votação terminou ",
