--- a/public/locales/tr.json
+++ b/public/locales/tr.json
@@ -5,22 +5,22 @@
     "pool": "Havuz",
     "farm": "Farm",
     "stake": "Stake",
-    "newPng": "Yeni PNG",
-    "oldPng": "Eski PNG",
+    "newRug": "Yeni RUG",
+    "oldRug": "Eski RUG",
     "vote": "Oy Ver",
     "ido": "IDO",
     "charts": "Çizelgeler",
     "forum": "Forum",
-    "pngBreakDown": "PNG dağılımınız",
+    "pngBreakDown": "RUG dağılımınız",
     "balance": "Bakiye: ",
     "unclaimed": "Talep edilmemiş: ",
-    "pngPrice": "PNG fiyatı:",
-    "pngCirculation": "Dolaşan PNG arzı:",
+    "pngPrice": "RUG fiyatı:",
+    "pngCirculation": "Dolaşan RUG arzı:",
     "totalSupply": "Toplam Arz",
     "makeSureURLWarning": "URL'nin bu olduğundan emin olun:",
     "alwaysMakeSureWarning": "Her zaman URL'nin bu olduğundan emin olun:",
     "bookmarkIt": "güvende olmak için yer imlerine ekleyin.",
-    "addMetamask": "PNG'yi MetaMask'e ekleyin"
+    "addMetamask": "RUG'yi MetaMask'e ekleyin"
   },
   "accountDetails": {
     "connectedWith": "Neye Bağlı: ",
@@ -60,7 +60,7 @@
     "deposit": "Yatır",
     "poolRate": "Havuzun getirisi",
     "currentReward": "Mevcut ödül",
-    "pngPerAvax": "PNG (AVAX başına, haftalık)",
+    "pngPerAvax": "RUG (AVAX başına, haftalık)",
     "rewardPerWeek": "{{ symbol }} (haftalık)",
     "earnUpTo": "Şu kadara kadar kazanın (yıllık)",
     "yourRate": "Getiriniz",
@@ -79,8 +79,8 @@
     "deposited": "Yatırıldı",
     "withdrawDepositedLiquidity": "Yatırılan likiditeyi çek",
     "depositedPglLiquidity": "Yatırılan PGL likiditesi:",
-    "whenYouWithdrawWarning": "Sağladığınız likiditeyi çektiğinizde PNG'nizi talep edersiniz ve Pangolin likidite tokenleriniz (PGL) size iade edilir. Bu likidite üzerinden artık PNG ödülleri kazanmayacaksınız. Orijinal token likiditeniz, likidite havuzunda kalacaktır.",
-    "whenYouWithdrawSingleSideWarning": "Çekim işlemi yaptığınızda {{ symbol }} talep edilir ve PNG tokenleriniz size iade edilir. Bu PNG staking'i üzerinden artık {{ symbol }} ödülü kazanamayacaksınız.",
+    "whenYouWithdrawWarning": "Sağladığınız likiditeyi çektiğinizde RUG'nizi talep edersiniz ve Pangolin likidite tokenleriniz (PGL) size iade edilir. Bu likidite üzerinden artık RUG ödülleri kazanmayacaksınız. Orijinal token likiditeniz, likidite havuzunda kalacaktır.",
+    "whenYouWithdrawSingleSideWarning": "Çekim işlemi yaptığınızda {{ symbol }} talep edilir ve RUG tokenleriniz size iade edilir. Bu RUG staking'i üzerinden artık {{ symbol }} ödülü kazanamayacaksınız.",
     "withdrawAndClaim": "Çek & Ödülü Talep Et",
     "withdrewStakingToken": "{{ symbol }} çekildi!",
     "approve": "Onayla",
@@ -227,7 +227,7 @@
     "minutes": "dakika"
   },
   "vote": {
-    "earnedPng": "Kazanılan PNG tokenleri, Pangolin'in yönetimindeki oy hakkını temsil eder.",
+    "earnedRug": "Kazanılan RUG tokenleri, Pangolin'in yönetimindeki oy hakkını temsil eder.",
     "canEitherVote": "Her önergeye kendiniz oy verebilir veya oylarınızı üçüncü bir partiye devredebilirsiniz.",
     "delegateVotes": "Oylarınızın Yetkisini Başkasına Verin",
     "selfDelegate": "Kendinizi Temsil Edin",
@@ -293,12 +293,12 @@
     "poolTokens": " Havuz Tokenleri"
   },
   "airdrop": {
-    "claimPngAirdrop": "Airdrop’dan Gelen PNG’yi Talep Et",
+    "claimRugAirdrop": "Airdrop’dan Gelen RUG’yi Talep Et",
     "claimPeriodEnded": "Airdrop’u talep etme süresi sonra erdi.",
     "connectWalletViewLiquidity": "Likiditenizi görmek için bir cüzdana bağlanın.",
     "noAvailableClaim": "Mevcut bir talebiniz bulunmuyor.",
     "noUniNoSushi": "UNI veya SUSHI tokeniniz mevcut değil. Cüzdanınıza UNI veya SUSHI tokenini eklemek için lütfen buradaki rehberi inceleyin.",
-    "youHave": "Talep edebileceğiniz mevcut PNG: ",
+    "youHave": "Talep edebileceğiniz mevcut RUG: ",
     "pngAvailableClaim": "",
     "loading": "Yükleniyor",
     "welcomeToTeamPangolin": "Pangolin ekibine hoşgeldiniz",
@@ -306,22 +306,22 @@
   },
   "earnPage": {
     "pangolinLiquidityMining": "Pangolin likidite madenciliği",
-    "pangolinLiquidityStaking": "Pangolin PNG staking",
-    "depositPangolinLiquidity": "Pangolin protokolünün yönetim tokeni olan PNG'yi elde etmek için Pangolin Likidite Sağlayıcı(PGL) tokenlerinizi yatırın.",
-    "depositPangolinStaking": "Ödül kazanmak için PNG tokenlerinizi yatırın ve stake edin.",
+    "pangolinLiquidityStaking": "Pangolin RUG staking",
+    "depositPangolinLiquidity": "Pangolin protokolünün yönetim tokeni olan RUG'yi elde etmek için Pangolin Likidite Sağlayıcı(PGL) tokenlerinizi yatırın.",
+    "depositPangolinStaking": "Ödül kazanmak için RUG tokenlerinizi yatırın ve stake edin.",
     "currentOpportunities": "Mevcut Fırsatlar",
-    "readMoreAboutPng": "PNG hakkında daha fazla bilgi edinin",
+    "readMoreAboutRug": "RUG hakkında daha fazla bilgi edinin",
     "getInsuranceCoverage": "Sigorta Kapsamı Alın",
     "getCoverNexusMutual": "Nexus Mutual'da siper alın",
     "importantUpdate": "ÖNEMLİ GÜNCELLEME",
     "pangolinGovernanceProposalResult": "Pangolin yönetiminin 1. önergesinin oylama sonucuna göre: Pangolin, yatırma işlemlerinde kullanılan sözleşmelerini değiştirmiştir. 19/04/2021 tarihinde saat 08:59’dan sonra (UTC saat dilimi), likidite sağlama karşılığında verilen tüm ödüller, yeni sözleşmelerine dağıtılacaktır. Geçişten önce ise, tüm ödüller eski sözleşmelere dağıtılmaya devam edecektir. Yield farming ödüllerinin kesintiye uğramasını önlemek adına likiditenizi eski sözleşmelerden kaldırmanız ve yeni sözleşmelere geçiş sağlamanız gerekmektedir. Bununla birlikte havuzlardaki likiditenizi çekmenize veya pozisyonlarınızı değiştirmenize gerek yoktur.",
-    "oldPngPools": "Eski PNG havuzları",
-    "newPngPools": "Yeni PNG havuzları",
+    "oldRugPools": "Eski RUG havuzları",
+    "newRugPools": "Yeni RUG havuzları",
     "participatingPools": "Katılım olan havuzlar",
     "rewardsNeverEnd": "Ödüller Hiç Bitmiyor!",
     "noActiveRewards": "Aktif ödül yok",
     "liquidityMining": "Likidite Madenciliği",
-    "pngStaking": "PNG Staking",
+    "pngStaking": "RUG Staking",
     "totalStaked": "Yatırılan Toplam",
     "poolRate": "Havuzun Getirisi",
     "step1": "1. Aşama: Pangolin likidite tokenleri (PGL) edinin",
@@ -332,7 +332,7 @@
     "unclaimedReward": "Talep edilmemiş {{ symbol }}’leriniz",
     "claim": "Talep Et",
     "rewardPerWeek": " {{ symbol }} / hafta",
-    "automagically": "Bir çekim işlemi yaptığınızda sözleşme otomatik olarak PNG'lerinizi sizin adınıza talep edecektir!",
+    "automagically": "Bir çekim işlemi yaptığınızda sözleşme otomatik olarak RUG'lerinizi sizin adınıza talep edecektir!",
     "deposit": "Yatır",
     "depositStakingTokens": "{{ symbol }} Tokeni Yatır",
     "stake": "Stake edin",
@@ -421,8 +421,8 @@
     "unlockVotes": "Oyların Kilidini Kaldır",
     "updateDelegation": "Delegasyonu(Yetkilerdirme) Güncelle",
     "pangolinGovernance": "Pangolin Yönetimi",
-    "earnedPngTokens": "PNG tokenleri, Pangolin'in yönetiminde kullanabildiğiniz oy hakkını temsil eder. Her önergede kendiniz oy verebilir veya oy haklarınızı üçüncü bir partiye devredebilirsiniz.",
-    "eligibleToVote": "Oy kullanmaya uygun olmak için cüzdanınızda PNG tutmanız ve oylama başında PNG'lerinizi yetkilendirmeniz gerekir. Oylama başladıktan sonra PNG'lerinizi bir havuza aktarabilir veya harcayabilirsiniz.",
+    "earnedRugTokens": "RUG tokenleri, Pangolin'in yönetiminde kullanabildiğiniz oy hakkını temsil eder. Her önergede kendiniz oy verebilir veya oy haklarınızı üçüncü bir partiye devredebilirsiniz.",
+    "eligibleToVote": "Oy kullanmaya uygun olmak için cüzdanınızda RUG tutmanız ve oylama başında RUG'lerinizi yetkilendirmeniz gerekir. Oylama başladıktan sonra RUG'lerinizi bir havuza aktarabilir veya harcayabilirsiniz.",
     "governanceVotes": "Yönetimin sunduğu önergeler, basit çoğunlukla kararlaştırılır. Ulaşılması veya geçilmesi gereken bir çoğunluk eşiği yoktur.",
     "proposals": "Önergeler",
     "allProposals": "Tüm Önergeler",
@@ -432,7 +432,7 @@
     "edit": "düzenle",
     "noProposalsFound": "Önerge bulunamadı.",
     "proposalCommunityMembers": "Topluluk üyeleri tarafından gönderilen önergeler burada görünecektir.",
-    "minimumThreshold": "Önerge vermek için gerekli olan minimum eşik 1.000.000 PNG'dir",
+    "minimumThreshold": "Önerge vermek için gerekli olan minimum eşik 1.000.000 RUG'dir",
     "votingStarted": "Oylama başladı ",
     "votingStarts": "Oylama başlıyor ",
     "votingEnded": "Oylama bitti ",
