--- a/public/locales/vn.json
+++ b/public/locales/vn.json
@@ -5,22 +5,22 @@
     "pool": "Bể",
     "farm": "Farm",
     "stake": "Stake",
-    "newPng": "PNG mới",
-    "oldPng": "PNG cũ",
+    "newRug": "RUG mới",
+    "oldRug": "RUG cũ",
     "vote": "Bình chọn",
     "ido": "IDO",
     "charts": "Bảng",
     "forum": "Diễn đàn",
-    "pngBreakDown": "PNG của bạn gặp sự cố",
+    "pngBreakDown": "RUG của bạn gặp sự cố",
     "balance": "Số dư: ",
     "unclaimed": "Chưa được nhận: ",
-    "pngPrice": "Giá PNG:",
-    "pngCirculation": "Tổng PNG đang lưu thông:",
+    "pngPrice": "Giá RUG:",
+    "pngCirculation": "Tổng RUG đang lưu thông:",
     "totalSupply": "Tổng cung",
     "makeSureURLWarning": "Đảm bảo rằng URL là:",
     "alwaysMakeSureWarning": "Luôn đảm bảo rằng URL là:",
     "bookmarkIt": "Đánh dấu nó để an toàn.",
-    "addMetamask": "Thêm PNG vào MetaMask"
+    "addMetamask": "Thêm RUG vào MetaMask"
   },
   "accountDetails": {
     "connectedWith": "Kết nối với",
@@ -60,7 +60,7 @@
     "deposit": "Gửi",
     "poolRate": "Tỷ suất bể",
     "currentReward": "Phần thưởng hiện tại",
-    "pngPerAvax": "PNG/tuần trên mỗi AVAX",
+    "pngPerAvax": "RUG/tuần trên mỗi AVAX",
     "rewardPerWeek": "{{ symbol }} / Tuần",
     "earnUpTo": "Lợi nhuận hàng năm lên đến",
     "yourRate": "Tỷ lệ của bạn",
@@ -79,8 +79,8 @@
     "deposited": "Đã gửi",
     "withdrawDepositedLiquidity": "Rút thanh khoản đã gửi",
     "depositedPglLiquidity": "Thanh khoản PGL đã gửi:",
-    "whenYouWithdrawWarning": "Khi bạn rút tiền, số phần thưởng PNG được nhận và mã thông báo Pangolin Liquidity của bạn, PGL, được trả lại cho bạn. Bạn sẽ không được thưởng thêm PNG trên mã thanh khoản này nữa. Số token thanh khoản ban đầu vẫn còn lại trong bể",
-    "whenYouWithdrawSingleSideWarning": "Khi bạn rút tiền, {{symbol}} của bạn sẽ được nhận và PNG của bạn sẽ được trả lại. Bạn sẽ không còn kiếm được phần thưởng {{Symbol}} trên token PNG này nữa.",
+    "whenYouWithdrawWarning": "Khi bạn rút tiền, số phần thưởng RUG được nhận và mã thông báo Pangolin Liquidity của bạn, PGL, được trả lại cho bạn. Bạn sẽ không được thưởng thêm RUG trên mã thanh khoản này nữa. Số token thanh khoản ban đầu vẫn còn lại trong bể",
+    "whenYouWithdrawSingleSideWarning": "Khi bạn rút tiền, {{symbol}} của bạn sẽ được nhận và RUG của bạn sẽ được trả lại. Bạn sẽ không còn kiếm được phần thưởng {{Symbol}} trên token RUG này nữa.",
     "withdrawAndClaim": "Rút và nhận",
     "withdrewStakingToken": "Đã rút!{{ symbol }}",
     "approve": "Chấp nhận",
@@ -227,7 +227,7 @@
     "minutes": "phút"
   },
   "vote": {
-    "earnedPng": "Mã token PNG kiếm được đại diện cho cổ phần biểu quyết trong quản trị Pangolin.",
+    "earnedRug": "Mã token RUG kiếm được đại diện cho cổ phần biểu quyết trong quản trị Pangolin.",
     "canEitherVote": "Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba. ",
     "delegateVotes": "Phiếu bầu ủy quyền",
     "selfDelegate": "Tự ủy quyền",
@@ -293,35 +293,35 @@
     "poolTokens": " Bể token"
   },
   "airdrop": {
-    "claimPngAirdrop": "Nhận PNG từ Aidrop",
+    "claimRugAirdrop": "Nhận RUG từ Aidrop",
     "claimPeriodEnded": "Thời gian nhận airdrop đã kết thúc.",
     "connectWalletViewLiquidity": "Kết nối với ví để tìm hiều thanh khoản của bạn.",
     "noAvailableClaim": "Bạn không có phần thưởng nào.",
     "noUniNoSushi": "Bạn không có mã token UNI hoặc SUSHI. Vui lòng làm theo hướng dẫn tại đây để thêm mã token UNI hoặc SUSHI vào ví của bạn .",
     "youHave": "Bạn có ",
-    "pngAvailableClaim": " PNG khả dụng để nhận",
+    "pngAvailableClaim": " RUG khả dụng để nhận",
     "loading": "Đang tải",
     "welcomeToTeamPangolin": "Chào mừng đến đội Pagonlin",
     "claim": "Nhận "
   },
   "earnPage": {
     "pangolinLiquidityMining": "Khai thác thanh khoản Pangolin",
-    "pangolinLiquidityStaking": "Đặt cổ phần Pangolin PNG ",
-    "depositPangolinLiquidity": "Gửi mã token PGL của vị thế cung cấp thanh khoản Pangolin của bạn để nhận PNG, mã thông báo quản trị giao thức Pangolin.",
-    "depositPangolinStaking": "Gửi và đặt cổ phần mã token PNG của bạn để nhận được nhiều token hơn.",
+    "pangolinLiquidityStaking": "Đặt cổ phần Pangolin RUG ",
+    "depositPangolinLiquidity": "Gửi mã token PGL của vị thế cung cấp thanh khoản Pangolin của bạn để nhận RUG, mã thông báo quản trị giao thức Pangolin.",
+    "depositPangolinStaking": "Gửi và đặt cổ phần mã token RUG của bạn để nhận được nhiều token hơn.",
     "currentOpportunities": "Cơ hội hiện tại",
-    "readMoreAboutPng": "Tìm hiểu nhiều hơn về PNG",
+    "readMoreAboutRug": "Tìm hiểu nhiều hơn về RUG",
     "getInsuranceCoverage": "Nhận bảo hiểm",
     "getCoverNexusMutual": "Nhận trang bìa trên Nexus Mutual",
     "importantUpdate": "CẬP NHẬT QUAN TRỌNG",
     "pangolinGovernanceProposalResult": "Theo kết quả của đề xuất quản trị Pangolin 1, Pangolin đang thay đổi các hợp đồng đặt cổ phần! Sau khoảng 08:59 UTC vào ngày 19 tháng 4, tất cả phần thưởng đặt cổ phần sẽ được phân phối cho các hợp đồng đặt cổ phần mới. Trước khi chuyển đổi, tất cả phần thưởng sẽ vẫn được phân phối cho các hợp đồng cũ. Để tránh bị gián đoạn việc kiếm phần thưởng farming, bạn cần loại bỏ thanh khoản của mình khỏi các hợp đồng cũ và thực hiện lại các hợp đồng mới. Bạn không cần phải xóa thanh khoản khỏi bể của mình hoặc thay đổi vị thế của mình. ",
-    "oldPngPools": "Những bể PNG cũ",
-    "newPngPools": "Những bể PNG mới",
+    "oldRugPools": "Những bể RUG cũ",
+    "newRugPools": "Những bể RUG mới",
     "participatingPools": "Đang tham gia vào các bể",
     "rewardsNeverEnd": "Phần thưởng không bao giờ kết thúc!",
     "noActiveRewards": "Không có phần thưởng hoạt động",
     "liquidityMining": "Khai thác thanh khoản",
-    "pngStaking": "Đang đặt cổ phần PNG",
+    "pngStaking": "Đang đặt cổ phần RUG",
     "totalStaked": "Tổng số cổ phần đã đặt",
     "poolRate": "Tỷ suất bể",
     "step1": "Bước 1. Nhận token thanh khoản Pangolin (PGL)",
@@ -332,7 +332,7 @@
     "unclaimedReward": "Số {{ symbol }} của bạn chưa nhận",
     "claim": "Nhận",
     "rewardPerWeek": " {{ symbol }} / tuần",
-    "automagically": "Khi bạn rút tiền, hợp đồng sẽ tự động nhận phần thưởng PNG thay cho bạn! ",
+    "automagically": "Khi bạn rút tiền, hợp đồng sẽ tự động nhận phần thưởng RUG thay cho bạn! ",
     "deposit": "Gửi",
     "depositStakingTokens": "Gửi token {{ symbol }}",
     "stake": "Đặt cổ phần",
@@ -421,8 +421,8 @@
     "unlockVotes": "Mở khóa phiếu bầu",
     "updateDelegation": "Cập nhật ủy quyền",
     "pangolinGovernance": "Quản trị Pangolin",
-    "earnedPngTokens": "Các mã token PNG đại diện cho cổ phần có quyền biểu quyết trong quản trị Pangolin. Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba.",
-    "eligibleToVote": "Để đủ điều kiện bỏ phiếu, bạn phải giữ PNG trong ví của mình và ủy quyền khi bắt đầu bỏ phiếu. Sau khi bắt đầu bỏ phiếu, bạn có thể gộp hoặc sử dụng PNG của mình.",
+    "earnedRugTokens": "Các mã token RUG đại diện cho cổ phần có quyền biểu quyết trong quản trị Pangolin. Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba.",
+    "eligibleToVote": "Để đủ điều kiện bỏ phiếu, bạn phải giữ RUG trong ví của mình và ủy quyền khi bắt đầu bỏ phiếu. Sau khi bắt đầu bỏ phiếu, bạn có thể gộp hoặc sử dụng RUG của mình.",
     "governanceVotes": "Các phiếu bầu quản trị được quyết định theo đa số. Không có ngưỡng đại biểu. ",
     "proposals": "Đề xuất",
     "allProposals": "Tất cả đề xuất",
@@ -432,7 +432,7 @@
     "edit": "sửa",
     "noProposalsFound": "Không đề xuất nào được tìm thấy.",
     "proposalCommunityMembers": "Các đề xuất do các thành viên cộng đồng gửi sẽ xuất hiện ở đây.",
-    "minimumThreshold": "Yêu cầu ngưỡng tối thiểu 1.000.000 PNG để gửi đề xuất ",
+    "minimumThreshold": "Yêu cầu ngưỡng tối thiểu 1.000.000 RUG để gửi đề xuất ",
     "votingStarted": "Bỏ phiếu đã bắt đầu",
     "votingStarts": "Bắt đầu bỏ phiếu ",
     "votingEnded": "Bỏ phiếu đã kết thúc ",
