--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,22 +5,22 @@
     "pool": "Pool",
     "farm": "Farm",
     "stake": "Stake",
-    "newPng": "New PNG",
-    "oldPng": "Old PNG",
+    "newRug": "New RUG",
+    "oldRug": "Old RUG",
     "vote": "Vote",
     "ido": "IDO",
     "charts": "Charts",
     "forum": "Forum",
-    "pngBreakDown": "Your PNG Breakdown",
+    "pngBreakDown": "Your RUG Breakdown",
     "balance": "Balance: ",
     "unclaimed": "Unclaimed: ",
-    "pngPrice": "PNG price:",
-    "pngCirculation": "PNG in circulation:",
+    "pngPrice": "RUG price:",
+    "pngCirculation": "RUG in circulation:",
     "totalSupply": "Total Supply",
     "makeSureURLWarning": "Make sure the URL is",
     "alwaysMakeSureWarning": "Always make sure the URL is",
     "bookmarkIt": "bookmark it to be safe.",
-    "addMetamask": "Add PNG to MetaMask"
+    "addMetamask": "Add RUG to MetaMask"
   },
   "accountDetails": {
     "connectedWith": "Connected with ",
@@ -60,7 +60,7 @@
     "deposit": "Deposit",
     "poolRate": "Pool rate",
     "currentReward": "Current reward",
-    "pngPerAvax": "PNG / Week per AVAX",
+    "pngPerAvax": "RUG / Week per AVAX",
     "rewardPerWeek": "{{ symbol }} / Week",
     "earnUpTo": "Earn up to (yearly)",
     "yourRate": "Your rate",
@@ -79,8 +79,8 @@
     "deposited": "Deposited",
     "withdrawDepositedLiquidity": "Withdraw deposited liquidity",
     "depositedPglLiquidity": "Deposited PGL liquidity:",
-    "whenYouWithdrawWarning": "When you withdraw, your PNG is claimed and your Pangolin Liquidity tokens, PGL, are returned to you. You will no longer earn PNG rewards on this liquidity. Your original token liquidity will remain in its liquidity pool.",
-    "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your PNG is returned to you. You will no longer earn {{ symbol }} rewards on this PNG.",
+    "whenYouWithdrawWarning": "When you withdraw, your RUG is claimed and your Pangolin Liquidity tokens, PGL, are returned to you. You will no longer earn RUG rewards on this liquidity. Your original token liquidity will remain in its liquidity pool.",
+    "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
     "withdrawAndClaim": "Withdraw & Claim",
     "withdrewStakingToken": "Withdrew {{ symbol }}!",
     "approve": "Approve",
@@ -130,7 +130,7 @@
     "manage": "Manage",
     "loading": "Loading",
     "yourPosition": "Your position",
-    "byAddingLiquidityInfo": "By adding liquidity you'll earn 0.25% of all trades on this pair proportional to your share of the pool.\n Fees are added to the pool, accrue in real time and can be claimed by withdrawing your liquidity."
+    "byAddingLiquidityInfo": "By adding liquidity you'll earn 0.20% of all trades on this pair proportional to your share of the pool.\n Fees are added to the pool, accrue in real time and can be claimed by withdrawing your liquidity."
   },
   "searchModal": {
     "commonBases": "Common bases",
@@ -174,7 +174,7 @@
     "priceImpact": "Price Impact",
     "priceImpactHelper": "The difference between the market price and estimated price due to trade size.",
     "liquidityProviderFee": "Liquidity Provider Fee",
-    "liquidityProviderHelper": "A portion of each trade (0.30%) goes to liquidity providers as a protocol incentive.",
+    "liquidityProviderHelper": "A portion of each trade (0.20%) goes to liquidity providers as a protocol incentive.",
     "route": "Route",
     "routingHelper": "Routing through these tokens resulted in the best price for your trade.",
     "confirmSwap": "Confirm Swap",
@@ -226,7 +226,7 @@
     "minutes": "minutes"
   },
   "vote": {
-    "earnedPng": "Earned PNG tokens represent voting shares in Pangolin governance.",
+    "earnedRug": "Earned RUG tokens represent voting shares in Pangolin governance.",
     "canEitherVote": "You can either vote on each proposal yourself or delegate your votes to a third party.",
     "delegateVotes": "Delegate Votes",
     "selfDelegate": "Self Delegate",
@@ -292,35 +292,35 @@
     "poolTokens": " Pool Tokens"
   },
   "airdrop": {
-    "claimPngAirdrop": "Claim PNG from Airdrop",
+    "claimRugAirdrop": "Claim RUG from Airdrop",
     "claimPeriodEnded": "The airdrop claim period has ended.",
     "connectWalletViewLiquidity": "Connect to a wallet to view your liquidity.",
     "noAvailableClaim": "You have no available claim.",
     "noUniNoSushi": "You have no UNI or SUSHI tokens. Please follow the tutorial here to add UNI or SUSHI tokens to your wallet.",
     "youHave": "You have ",
-    "pngAvailableClaim": " PNG available to claim",
+    "pngAvailableClaim": " RUG available to claim",
     "loading": "Loading",
     "welcomeToTeamPangolin": "Welcome to team Pangolin",
     "claim": "Claim "
   },
   "earnPage": {
     "pangolinLiquidityMining": "Pangolin liquidity mining",
-    "pangolinLiquidityStaking": "Pangolin PNG staking",
-    "depositPangolinLiquidity": "Deposit your Pangolin Liquidity Provider PGL tokens to receive PNG, the Pangolin protocol governance token.",
-    "depositPangolinStaking": "Deposit and stake your PNG tokens to earn more tokens.",
+    "pangolinLiquidityStaking": "Pangolin RUG staking",
+    "depositPangolinLiquidity": "Deposit your Pangolin Liquidity Provider PGL tokens to receive RUG, the Pangolin protocol governance token.",
+    "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
     "currentOpportunities": "Current opportunities",
-    "readMoreAboutPng": "Read more about PNG",
+    "readMoreAboutRug": "Read more about RUG",
     "getInsuranceCoverage": "Get Insurance Coverage",
     "getCoverNexusMutual": "Get cover on Nexus Mutual",
     "importantUpdate": "IMPORTANT UPDATE",
     "pangolinGovernanceProposalResult": "As a result of Pangolin governance proposal 1, Pangolin is changing staking contracts! After approximately 08:59 UTC on 4/19, all staking rewards will be distributed to the new staking contracts. Before the switch, all rewards will still be distributed to the old contracts. To avoid interruptions to yield farming rewards, you need to unstake your liquidity from the old contracts and restake in the new contracts. You do not need to remove liquidity from your pools or alter your positions.",
-    "oldPngPools": "Old PNG pools",
-    "newPngPools": "New PNG pools",
+    "oldRugPools": "Old RUG pools",
+    "newRugPools": "New RUG pools",
     "participatingPools": "Participating pools",
     "rewardsNeverEnd": "The Rewards Never End!",
     "noActiveRewards": "No active rewards",
     "liquidityMining": "Liquidity Mining",
-    "pngStaking": "PNG Staking",
+    "pngStaking": "RUG Staking",
     "totalStaked": "Total Staked",
     "poolRate": "Pool Rate",
     "step1": "Step 1. Get Pangolin Liquidity tokens (PGL)",
@@ -331,7 +331,7 @@
     "unclaimedReward": "Your unclaimed {{ symbol }}",
     "claim": "Claim",
     "rewardPerWeek": " {{ symbol }} / week",
-    "automagically": "When you withdraw, the contract will automagically claim PNG on your behalf!",
+    "automagically": "When you withdraw, the contract will automagically claim RUG on your behalf!",
     "deposit": "Deposit",
     "depositStakingTokens": "Deposit {{ symbol }} Tokens",
     "stake": "Stake",
@@ -342,7 +342,7 @@
   },
   "pool": {
     "liquidityProviderRewards": "Liquidity provider rewards",
-    "liquidityProvidersEarn": "Liquidity providers earn a 0.25% fee on all trades proportional to their share of the pool. Fees are added to the pool, accrue in real time and can be claimed by withdrawing your liquidity.",
+    "liquidityProvidersEarn": "Liquidity providers earn a 0.20% fee on all trades proportional to their share of the pool. Fees are added to the pool, accrue in real time and can be claimed by withdrawing your liquidity.",
     "readMoreProviding": "Read more about providing liquidity",
     "viewStakedLiquidity": "View your staked liquidity",
     "yourLiquidity": "Your liquidity",
@@ -420,8 +420,8 @@
     "unlockVotes": "Unlock Votes",
     "updateDelegation": "Update Delegation",
     "pangolinGovernance": "Pangolin Governance",
-    "earnedPngTokens": "PNG tokens represent voting shares in Pangolin governance. You can vote on each proposal yourself or delegate your votes to a third party.",
-    "eligibleToVote": "To be eligible to vote, you must hold PNG in your wallet and delegate it at the start of voting. After voting has begun, you may pool or spend your PNG.",
+    "earnedRugTokens": "RUG tokens represent voting shares in Pangolin governance. You can vote on each proposal yourself or delegate your votes to a third party.",
+    "eligibleToVote": "To be eligible to vote, you must hold RUG in your wallet and delegate it at the start of voting. After voting has begun, you may pool or spend your RUG.",
     "governanceVotes": "Governance votes are decided by simple majority. There is no quorum threshold.",
     "proposals": "Proposals",
     "allProposals": "All Proposals",
@@ -431,7 +431,7 @@
     "edit": "edit",
     "noProposalsFound": "No proposals found.",
     "proposalCommunityMembers": "Proposals submitted by community members will appear here.",
-    "minimumThreshold": "A minimum threshold of 1,000,000 PNG is required to submit proposals",
+    "minimumThreshold": "A minimum threshold of 1,000,000 RUG is required to submit proposals",
     "votingStarted": "Voting started ",
     "votingStarts": "Voting starts ",
     "votingEnded": "Voting ended ",
