--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -5,22 +5,22 @@
     "pool": "Pool",
     "farm": "Farm",
     "stake": "Stake",
-    "newPng": "Nouveau PNG",
-    "oldPng": "Ancien PNG",
+    "newRug": "Nouveau RUG",
+    "oldRug": "Ancien RUG",
     "vote": "Vote",
     "ido": "IDO",
     "charts": "Graphiques",
     "forum": "Forum",
-    "pngBreakDown": "Votre répartition PNG",
+    "pngBreakDown": "Votre répartition RUG",
     "balance": "Balance: ",
     "unclaimed": "Non réclamé: ",
-    "pngPrice": "Prix PNG:",
-    "pngCirculation": "PNG en circulation:",
+    "pngPrice": "Prix RUG:",
+    "pngCirculation": "RUG en circulation:",
     "totalSupply": "Offre Totale",
     "makeSureURLWarning": "Assurez-vous que l'URL est",
     "alwaysMakeSureWarning": "Assurez-vous toujours que l'URL est",
     "bookmarkIt": "mettez-le en favori pour être sûr.",
-    "addMetamask": "Ajouter PNG à MetaMask"
+    "addMetamask": "Ajouter RUG à MetaMask"
   },
   "accountDetails": {
     "connectedWith": "Connecté avec ",
@@ -60,7 +60,7 @@
     "deposit": "Dépôt",
     "poolRate": "Taux de la pool",
     "currentReward": "Récompense actuelle",
-    "pngPerAvax": "PNG / Semaine par AVAX",
+    "pngPerAvax": "RUG / Semaine par AVAX",
     "rewardPerWeek": "{{ symbol }} / Semaine",
     "earnUpTo": "Gagnez jusqu'à (par an)",
     "yourRate": "Votre taux",
@@ -79,8 +79,8 @@
     "deposited": "Déposé",
     "withdrawDepositedLiquidity": "Retirer les liquidités déposées",
     "depositedPglLiquidity": "Liquidité PGL déposée :",
-    "whenYouWithdrawWarning": "Lorsque vous effectuez un retrait, votre PNG est réclamé et vos jetons de liquidité Pangolin, PGL, vous sont rendus. Vous ne gagnerez plus de récompenses en PNG sur cette liquidité. Votre jeton de liquidité original restera dans sa pool de liquidité.",
-    "whenYouWithdrawSingleSideWarning": "Lorsque vous retirez, vos {{ symbol }} sont réclamés et vous récupérez vos PNG. Vous ne gagnerez plus de récompenses en  {{ symbol }} sur ces PNG.",
+    "whenYouWithdrawWarning": "Lorsque vous effectuez un retrait, votre RUG est réclamé et vos jetons de liquidité Pangolin, PGL, vous sont rendus. Vous ne gagnerez plus de récompenses en RUG sur cette liquidité. Votre jeton de liquidité original restera dans sa pool de liquidité.",
+    "whenYouWithdrawSingleSideWarning": "Lorsque vous retirez, vos {{ symbol }} sont réclamés et vous récupérez vos RUG. Vous ne gagnerez plus de récompenses en  {{ symbol }} sur ces RUG.",
     "withdrawAndClaim": "Retirer & réclamer",
     "withdrewStakingToken": "{{ symbol }} Retiré!",
     "approve": "Approuver",
@@ -227,7 +227,7 @@
     "minutes": "minutes"
   },
   "vote": {
-    "earnedPng": "Les jetons PNG gagnés représentent des parts de vote dans la gouvernance de Pangolin.",
+    "earnedRug": "Les jetons RUG gagnés représentent des parts de vote dans la gouvernance de Pangolin.",
     "canEitherVote": "Vous pouvez soit voter vous-même sur chaque proposition, soit déléguer vos votes à un tiers.",
     "delegateVotes": "Votes délégués",
     "selfDelegate": "Autodélégué",
@@ -293,35 +293,35 @@
     "poolTokens": " Jetons de la pool"
   },
   "airdrop": {
-    "claimPngAirdrop": "Réclamer PNG de l'Airdrop",
+    "claimRugAirdrop": "Réclamer RUG de l'Airdrop",
     "claimPeriodEnded": "La période de réclamation de l'airdrop est terminée.",
     "connectWalletViewLiquidity": "Connectez-vous à un portefeuille pour consulter vos liquidités.",
     "noAvailableClaim": "Vous n'avez pas de réclamation disponible.",
     "noUniNoSushi": "Vous n'avez pas de jetons UNI ou SUSHI. Veuillez suivre le tutoriel ici pour ajouter des jetons UNI ou SUSHI à votre portefeuille.",
     "youHave": "Vous avez ",
-    "pngAvailableClaim": " PNG disponible à réclamer",
+    "pngAvailableClaim": " RUG disponible à réclamer",
     "loading": "Chargement",
     "welcomeToTeamPangolin": "Bienvenue dans l'équipe Pangolin",
     "claim": "Réclamer "
   },
   "earnPage": {
     "pangolinLiquidityMining": "Minage de la liquidité de Pangolin",
-    "pangolinLiquidityStaking": "Pangolin PNG staking",
-    "depositPangolinLiquidity": "Déposez vos jetons PGL (Pangolin Liquidity Provider) pour recevoir PNG, le jeton de gouvernance du protocole Pangolin.",
-    "depositPangolinStaking": "Déposez vos PNG pour gagner plus de tokens parmi les opportunités présentées.",
+    "pangolinLiquidityStaking": "Pangolin RUG staking",
+    "depositPangolinLiquidity": "Déposez vos jetons PGL (Pangolin Liquidity Provider) pour recevoir RUG, le jeton de gouvernance du protocole Pangolin.",
+    "depositPangolinStaking": "Déposez vos RUG pour gagner plus de tokens parmi les opportunités présentées.",
     "currentOpportunities": "Opportunités actuelles",
-    "readMoreAboutPng": "En savoir plus sur PNG",
+    "readMoreAboutRug": "En savoir plus sur RUG",
     "getInsuranceCoverage": "Obtenez une couverture d'assurance",
     "getCoverNexusMutual": "Obtenez une couverture sur Nexus Mutual",
     "importantUpdate": "IMPORTANTE MISE À JOUR",
     "pangolinGovernanceProposalResult": "Suite à la proposition de gouvernance 1 de Pangolin, Pangolin change de contrat de staking ! Après environ 08:59 UTC le 19 avril, toutes les récompenses de staking seront distribuées aux nouveaux contrats de staking. Avant le changement, toutes les récompenses seront encore distribuées aux anciens contrats. Pour éviter toute interruption des récompenses du yield farming, vous devez retirer vos liquidités des anciens contrats et les remettre dans les nouveaux contrats. Vous n'avez pas besoin de retirer des liquidités de vos pools ou de modifier vos positions.",
-    "oldPngPools": "Anciennes Pools PNG",
-    "newPngPools": "Nouvelles Pools PNG",
+    "oldRugPools": "Anciennes Pools RUG",
+    "newRugPools": "Nouvelles Pools RUG",
     "participatingPools": "Pools participantes",
     "rewardsNeverEnd": "Les récompenses ne s'arrêtent jamais !",
     "noActiveRewards": "Pas de récompenses actives",
     "liquidityMining": "Mining des liquidités",
-    "pngStaking": "PNG Staking",
+    "pngStaking": "RUG Staking",
     "totalStaked": "Total Staké",
     "poolRate": "Taux de la pool",
     "step1": "Etape 1. Obtenez des jetons de liquidité Pangolin (PGL)",
@@ -332,7 +332,7 @@
     "unclaimedReward": "Vos {{ symbol }} non réclamés",
     "claim": "Réclamer",
     "rewardPerWeek": " {{ symbol }} / semaine",
-    "automagically": "Lorsque vous vous retirez, le contrat réclame automatiquement le PNG en votre nom !",
+    "automagically": "Lorsque vous vous retirez, le contrat réclame automatiquement le RUG en votre nom !",
     "deposit": "Dépôt",
     "depositStakingTokens": "Déposer des jetons {{ symbol }}",
     "stake": "Dépôt",
@@ -421,8 +421,8 @@
     "unlockVotes": "Déverrouiller les votes",
     "updateDelegation": "Mise à jour de la délégation",
     "pangolinGovernance": "Gouvernance de Pangolin",
-    "earnedPngTokens": "Les jetons PNG représentent des actions de vote dans la gouvernance de Pangolin. Vous pouvez voter vous-même sur chaque proposition ou déléguer vos votes à une tierce partie.",
-    "eligibleToVote": "Pour pouvoir voter, vous devez détenir des PNG dans votre portefeuille et les déléguer au début du vote. Après le début du vote, vous pouvez mettre en commun ou dépenser vos PNG.",
+    "earnedRugTokens": "Les jetons RUG représentent des actions de vote dans la gouvernance de Pangolin. Vous pouvez voter vous-même sur chaque proposition ou déléguer vos votes à une tierce partie.",
+    "eligibleToVote": "Pour pouvoir voter, vous devez détenir des RUG dans votre portefeuille et les déléguer au début du vote. Après le début du vote, vous pouvez mettre en commun ou dépenser vos RUG.",
     "governanceVotes": "Les votes de gouvernance sont décidés à la majorité simple. Il n'y a pas de seuil de quorum.",
     "proposals": "Propositions",
     "allProposals": "Toutes les propositions",
@@ -432,7 +432,7 @@
     "edit": "modifier",
     "noProposalsFound": "Aucune proposition trouvée.",
     "proposalCommunityMembers": "Les propositions soumises par les membres de la communauté apparaîtront ici.",
-    "minimumThreshold": "Un seuil minimum de 1 000 000 PNG est requis pour soumettre des propositions.",
+    "minimumThreshold": "Un seuil minimum de 1 000 000 RUG est requis pour soumettre des propositions.",
     "votingStarted": "Le vote a commencé ",
     "votingStarts": "Le vote commence ",
     "votingEnded": "Fin du vote ",
